Add comprehensive tests for RepositoryMetadataManager and CLI
- Implement unit tests for RepositoryMetadataManager covering constructor, package metadata retrieval, repository type detection, topic generation, metadata validation, and GitHub API interactions.
- Add integration tests to validate end-to-end functionality of metadata management workflows, including configuration loading and compliance checks.
- Create CLI integration tests to ensure proper module loading, file structure, and command handling.
- Introduce a setup file to suppress console warnings and errors during test execution for cleaner output.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,14 @@
     "engines": {
         "node": ">=14.0.0"
     },
+    "jest": {
+        "testEnvironment": "node",
+        "collectCoverageFrom": [
+            "index.js",
+            "bin/cli.js"
+        ],
+        "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
+    },
     "files": [
         "index.js",
         "bin/",
