--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
     "name": "@alteriom/repository-metadata-manager",
-    "version": "1.1.1",
-    "description": "Repository metadata management utility for Alteriom organization compliance",
+    "version": "2.0.0",
+    "description": "Complete repository compliance and health management suite for GitHub repositories",
     "main": "index.js",
     "bin": {
-        "alteriom-metadata": "./bin/cli.js"
+        "alteriom-metadata": "./bin/cli.js",
+        "repository-manager": "./bin/enhanced-cli.js",
+        "repo-health": "./bin/enhanced-cli.js"
     },
     "scripts": {
+        "start": "node bin/enhanced-cli.js",
+        "health": "node bin/enhanced-cli.js health",
+        "security": "node bin/enhanced-cli.js security --audit",
+        "branches": "node bin/enhanced-cli.js branches --audit",
+        "docs": "node bin/enhanced-cli.js docs --audit",
+        "cicd": "node bin/enhanced-cli.js cicd --audit",
+        "compliance": "node bin/enhanced-cli.js compliance",
+        "interactive": "node bin/enhanced-cli.js interactive",
         "test": "jest",
         "lint": "eslint .",
         "format": "prettier --write .",
@@ -41,12 +51,21 @@
         "organization-tools",
         "npm-package",
         "topics",
-        "description"
+        "description",
+        "health-score",
+        "security",
+        "documentation",
+        "ci-cd",
+        "branch-protection"
     ],
     "author": "Alteriom Organization",
     "license": "MIT",
     "dependencies": {
-        "@octokit/rest": "^20.0.0"
+        "@octokit/rest": "^20.0.0",
+        "chalk": "^4.1.2",
+        "commander": "^14.0.0",
+        "figlet": "^1.8.2",
+        "inquirer": "^8.2.6"
     },
     "devDependencies": {
         "dotenv": "^17.2.1",
@@ -82,6 +101,7 @@
     "files": [
         "index.js",
         "bin/",
+        "lib/",
         "scripts/",
         "README.md",
         "LICENSE"
