feat: Add comprehensive environment configuration and organization setup documentation
- Created ENVIRONMENT.md to guide users on setting up environment variables for the Repository Metadata Manager.
- Added ORGANIZATION_SETUP.md to assist organizations in configuring the tool without hardcoded values.
- Released initial version (v1.0.0) with detailed release notes outlining core features, installation instructions, and usage examples.
- Implemented a documentation compliance check script (docs-compliance-check.js) to audit repository documentation.
- Developed a documentation navigation helper (docs-navigator.js) for easy access to documentation files and structure validation.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
         "postpublish": "echo 'Successfully published version' $(node -p \"require('./package.json').version\") 'to npm!'",
         "release": "node scripts/release.js",
         "release:status": "node scripts/release.js status",
-        "release:check": "node scripts/release.js check"
+        "release:check": "node scripts/release.js check",
+        "docs:check": "node scripts/docs-compliance-check.js",
+        "docs:fix": "node scripts/docs-compliance-check.js --fix",
+        "docs:nav": "node scripts/docs-navigator.js",
+        "docs:validate": "node scripts/docs-navigator.js validate"
     },
     "keywords": [
         "alteriom",
