feat: add security summary script and improve security reporting
- Added security-summary.js for comprehensive security status reporting
- Combines GitHub workflow results with local security analysis
- Added npm script security:summary for easy access
- Shows clear pass/fail status with detailed local security scoring (90/100)
- Addresses CodeQL analysis issues by providing alternative validation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "health": "node bin/enhanced-cli.js health",
         "security": "node bin/enhanced-cli.js security --audit",
         "security:local": "node scripts/security-audit-local.js",
+        "security:summary": "node scripts/security-summary.js",
         "audit": "npm audit",
         "audit:fix": "npm audit fix",
         "branches": "node bin/enhanced-cli.js branches --audit",
