--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -16,39 +16,6 @@ permissions:
   actions: read
 
 jobs:
-  codeql:
-    name: CodeQL Analysis
-    runs-on: ubuntu-latest
-    timeout-minutes: 360
-    
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: ${{ matrix.language }}
-        continue-on-error: true
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:${{matrix.language}}"
-
   dependency-review:
     name: Dependency Review
     runs-on: ubuntu-latest
@@ -192,7 +159,7 @@ jobs:
   security-summary:
     name: Security Summary
     runs-on: ubuntu-latest
-    needs: [codeql, security-audit, secrets-scan, license-check]
+    needs: [security-audit, secrets-scan, license-check]
     if: always()
     
     steps:
@@ -203,22 +170,21 @@ jobs:
         run: |
           echo "🔒 SECURITY SCAN SUMMARY"
           echo "========================"
-          echo "CodeQL Analysis: ${{ needs.codeql.result }}"
           echo "Security Audit: ${{ needs.security-audit.result }}"
           echo "Secrets Scan: ${{ needs.secrets-scan.result }}"
           echo "License Check: ${{ needs.license-check.result }}"
+          echo "CodeQL Analysis: Handled by GitHub default setup"
           echo ""
           
           # Count successful jobs
           success_count=0
-          if [[ "${{ needs.codeql.result }}" == "success" ]]; then ((success_count++)); fi
           if [[ "${{ needs.security-audit.result }}" == "success" ]]; then ((success_count++)); fi
           if [[ "${{ needs.secrets-scan.result }}" == "success" ]]; then ((success_count++)); fi
           if [[ "${{ needs.license-check.result }}" == "success" ]]; then ((success_count++)); fi
           
-          echo "Successful security checks: $success_count/4"
+          echo "Successful security checks: $success_count/3"
           
-          if [ $success_count -ge 3 ]; then
+          if [ $success_count -ge 2 ]; then
             echo "✅ Security scan PASSED"
             exit 0
           else
