--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -159,7 +159,7 @@ jobs:
   security-summary:
     name: Security Summary
     runs-on: ubuntu-latest
-    needs: [security-audit, secrets-scan, license-check]
+    needs: [dependency-review, security-audit, secrets-scan, license-check]
     if: always()
     
     steps:
@@ -170,24 +170,52 @@ jobs:
         run: |
           echo "🔒 SECURITY SCAN SUMMARY"
           echo "========================"
+          echo "Dependency Review: ${{ needs.dependency-review.result }}"
           echo "Security Audit: ${{ needs.security-audit.result }}"
           echo "Secrets Scan: ${{ needs.secrets-scan.result }}"
           echo "License Check: ${{ needs.license-check.result }}"
           echo "CodeQL Analysis: Handled by GitHub default setup"
           echo ""
           
-          # Count successful jobs
+          # Count successful jobs (accounting for conditional dependency-review)
           success_count=0
-          if [[ "${{ needs.security-audit.result }}" == "success" ]]; then ((success_count++)); fi
-          if [[ "${{ needs.secrets-scan.result }}" == "success" ]]; then ((success_count++)); fi
-          if [[ "${{ needs.license-check.result }}" == "success" ]]; then ((success_count++)); fi
+          total_jobs=3
           
-          echo "Successful security checks: $success_count/3"
+          # Dependency review only runs on PRs
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            total_jobs=4
+            if [[ "${{ needs.dependency-review.result }}" == "success" ]]; then 
+              success_count=$((success_count + 1))
+            fi
+          else
+            echo "ℹ️  Dependency Review skipped (not a pull request)"
+          fi
           
-          if [ $success_count -ge 2 ]; then
+          if [[ "${{ needs.security-audit.result }}" == "success" ]]; then 
+            success_count=$((success_count + 1))
+          fi
+          if [[ "${{ needs.secrets-scan.result }}" == "success" ]]; then 
+            success_count=$((success_count + 1))
+          fi
+          if [[ "${{ needs.license-check.result }}" == "success" ]]; then 
+            success_count=$((success_count + 1))
+          fi
+          
+          echo "Successful security checks: $success_count/$total_jobs"
+          
+          # Require all jobs to pass for the event type
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            required_success=3  # Allow 1 failure in PR (dependency-review is additional)
+          else
+            required_success=3  # All 3 core jobs must pass on push
+          fi
+          
+          echo "Required successes: $required_success"
+          
+          if [[ $success_count -ge $required_success ]]; then
             echo "✅ Security scan PASSED"
             exit 0
           else
-            echo "⚠️ Security scan needs attention"
+            echo "⚠️ Security scan needs attention ($success_count/$required_success)"
             exit 1
           fi
