--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,10 @@ on:
                     - major
                     - prerelease
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
     test:
         runs-on: ubuntu-latest
@@ -38,6 +42,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
+                  fetch-depth: 0
             - uses: actions/setup-node@v4
               with:
                   node-version: '18'
@@ -47,22 +52,34 @@ jobs:
               run: |
                   git config --global user.name 'github-actions[bot]'
                   git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-            - name: Version bump and publish
+            - name: Version bump and create tag
               run: |
                   case "${{ github.event.inputs.version_type }}" in
                     "patch")
-                      npm run release:patch
+                      npm version patch --no-git-tag-version
                       ;;
                     "minor")
-                      npm run release:minor
+                      npm version minor --no-git-tag-version
                       ;;
                     "major")
-                      npm run release:major
+                      npm version major --no-git-tag-version
                       ;;
                     "prerelease")
-                      npm run release:prerelease
+                      npm version prerelease --no-git-tag-version
                       ;;
                   esac
+                  
+                  # Get the new version
+                  NEW_VERSION=$(node -p "require('./package.json').version")
+                  
+                  # Commit and tag
+                  git add package.json package-lock.json
+                  git commit -m "chore: release v${NEW_VERSION}"
+                  git tag "v${NEW_VERSION}"
+                  git push origin main
+                  git push origin "v${NEW_VERSION}"
+            - name: Publish to npm
+              run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
