--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ on:
 permissions:
   contents: write
   packages: write
+  actions: write
 
 jobs:
     test:
@@ -56,16 +57,16 @@ jobs:
               run: |
                   case "${{ github.event.inputs.version_type }}" in
                     "patch")
-                      npm version patch --no-git-tag-version
+                      npm version patch --no-git-tag-version --no-scripts
                       ;;
                     "minor")
-                      npm version minor --no-git-tag-version
+                      npm version minor --no-git-tag-version --no-scripts
                       ;;
                     "major")
-                      npm version major --no-git-tag-version
+                      npm version major --no-git-tag-version --no-scripts
                       ;;
                     "prerelease")
-                      npm version prerelease --no-git-tag-version
+                      npm version prerelease --no-git-tag-version --no-scripts
                       ;;
                   esac
                   
