--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,29 +49,62 @@ jobs:
                   node-version: '18'
                   registry-url: 'https://registry.npmjs.org'
             - run: npm ci
+            - run: npm install -g semver  # Install semver for version calculations
             - name: Configure Git
               run: |
                   git config --global user.name 'github-actions[bot]'
                   git config --global user.email 'github-actions[bot]@users.noreply.github.com'
             - name: Version bump and create tag
               run: |
+                  # Get current version
+                  CURRENT_VERSION=$(node -p "require('./package.json').version")
+                  
+                  # Calculate new version
                   case "${{ github.event.inputs.version_type }}" in
                     "patch")
-                      npm version patch --no-git-tag-version --no-scripts
+                      NEW_VERSION=$(node -e "
+                        const semver = require('semver');
+                        console.log(semver.inc('$CURRENT_VERSION', 'patch'));
+                      ")
                       ;;
                     "minor")
-                      npm version minor --no-git-tag-version --no-scripts
+                      NEW_VERSION=$(node -e "
+                        const semver = require('semver');
+                        console.log(semver.inc('$CURRENT_VERSION', 'minor'));
+                      ")
                       ;;
                     "major")
-                      npm version major --no-git-tag-version --no-scripts
+                      NEW_VERSION=$(node -e "
+                        const semver = require('semver');
+                        console.log(semver.inc('$CURRENT_VERSION', 'major'));
+                      ")
                       ;;
                     "prerelease")
-                      npm version prerelease --no-git-tag-version --no-scripts
+                      NEW_VERSION=$(node -e "
+                        const semver = require('semver');
+                        console.log(semver.inc('$CURRENT_VERSION', 'prerelease', 'beta'));
+                      ")
                       ;;
                   esac
                   
-                  # Get the new version
-                  NEW_VERSION=$(node -p "require('./package.json').version")
+                  # Update package.json version
+                  node -e "
+                    const fs = require('fs');
+                    const pkg = JSON.parse(fs.readFileSync('package.json', 'utf8'));
+                    pkg.version = '$NEW_VERSION';
+                    fs.writeFileSync('package.json', JSON.stringify(pkg, null, 4) + '\n');
+                  "
+                  
+                  # Update package-lock.json version
+                  node -e "
+                    const fs = require('fs');
+                    const lock = JSON.parse(fs.readFileSync('package-lock.json', 'utf8'));
+                    lock.version = '$NEW_VERSION';
+                    if (lock.packages && lock.packages[''']) {
+                      lock.packages[''].version = '$NEW_VERSION';
+                    }
+                    fs.writeFileSync('package-lock.json', JSON.stringify(lock, null, 2) + '\n');
+                  "
                   
                   # Commit and tag
                   git add package.json package-lock.json
