--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
                     const fs = require('fs');
                     const lock = JSON.parse(fs.readFileSync('package-lock.json', 'utf8'));
                     lock.version = '$NEW_VERSION';
-                    if (lock.packages && lock.packages[''']) {
+                    if (lock.packages && lock.packages['']) {
                       lock.packages[''].version = '$NEW_VERSION';
                     }
                     fs.writeFileSync('package-lock.json', JSON.stringify(lock, null, 2) + '\n');
