--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -1,22 +1,22 @@
-name: "Custom CodeQL Configuration"
+name: 'Custom CodeQL Configuration'
 
 disable-default-queries: false
 
 queries:
-  - uses: security-and-quality
-  - uses: security-extended
+    - uses: security-and-quality
+    - uses: security-extended
 
 paths-ignore:
-  - "node_modules"
-  - "tests"
-  - "test"
-  - "**/*.test.js"
-  - "**/*.spec.js"
-  - "**/test/**"
-  - "**/tests/**"
+    - 'node_modules'
+    - 'tests'
+    - 'test'
+    - '**/*.test.js'
+    - '**/*.spec.js'
+    - '**/test/**'
+    - '**/tests/**'
 
 paths:
-  - "index.js"
-  - "bin"
-  - "lib"
-  - "scripts"
+    - 'index.js'
+    - 'bin'
+    - 'lib'
+    - 'scripts'
