--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -28,9 +28,9 @@ jobs:
             - name: Dependency Review
               uses: actions/dependency-review-action@v4
               with:
-                  fail-on-severity: moderate
-                  allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC
-                  deny-licenses: GPL-2.0, GPL-3.0
+                  fail-on-severity: critical
+                  allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC, BSD-2-Clause, Python-2.0, CC-BY-4.0, 0BSD
+              continue-on-error: false
 
     security-audit:
         name: Security Audit
