--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,42 @@ permissions:
     security-events: write
 
 jobs:
+    ci-tests:
+        name: ci/tests
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [18.x, 20.x, 22.x]
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+
+            - name: Setup Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: 'npm'
+
+            - name: Install dependencies
+              run: npm ci
+
+            - name: Run linting
+              run: npm run lint
+
+            - name: Run tests
+              run: |
+                  echo "Running core tests..."
+                  npm run test:core
+              env:
+                  CI: true
+
+            - name: Run security audit
+              run: npm audit --audit-level moderate
+              continue-on-error: true
+
     test:
         name: Test & Lint
         runs-on: ubuntu-latest
