--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,6 @@ jobs:
     ci-tests:
         name: ci/tests
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [18.x, 20.x, 22.x]
 
         steps:
             - name: Checkout repository
@@ -26,10 +23,10 @@ jobs:
               with:
                   fetch-depth: 0
 
-            - name: Setup Node.js ${{ matrix.node-version }}
+            - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: '20.x'
                   cache: 'npm'
 
             - name: Install dependencies
@@ -38,16 +35,17 @@ jobs:
             - name: Run linting
               run: npm run lint
 
-            - name: Run tests
-              run: |
-                  echo "Running core tests..."
-                  npm run test:core
+            - name: Run core tests
+              run: npm run test:core
               env:
                   CI: true
 
             - name: Run security audit
               run: npm audit --audit-level moderate
               continue-on-error: true
+
+            - name: Validate package
+              run: npm pack --dry-run
 
     test:
         name: Test & Lint
