--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "inquirer": "^12.9.4"
     },
     "devDependencies": {
+        "@eslint/js": "^9.35.0",
         "dotenv": "^17.2.1",
         "eslint": "^9.35.0",
         "jest": "^30.1.3",
