feat: Add Model Context Protocol (MCP) server for AI assistant integration
- Create mcp-server/ with 13 tools for repository management
- Tools include: health scoring, docs audit, security audit, CI/CD analysis
- Organization-wide operations: compliance reports, security dashboard
- Auto-fix capabilities with dry-run mode
- Full integration with GitHub Copilot, Claude, and other MCP clients
- Comprehensive documentation in mcp-server/README.md
- VS Code configuration template in .vscode/mcp.json
- Enables natural language repository management through AI assistants

--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
         "bin/",
         "lib/",
         "scripts/",
+        "mcp-server/",
+        ".vscode/mcp.json",
         "README.md",
         "LICENSE"
     ]
